--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,83 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #fefefe;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-form {
+    height: 65vh;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+h2 {
+    color: #222;
+}
+
+.input,
+.textarea {
+    width: 30vw;
+    margin: 1rem 0;
+    padding-left: 1rem;
+    font-size: 1.2rem;
+    border: 1px solid #222;
+}
+
+.input::placeholder,
+.textarea::placeholder {
+    font-size: 1.2rem;
+}
+
+.input {
+    height: 4vh;
+}
+
+.textarea {
+    padding-top: 1rem;
+    height: 25vh;
+    margin-bottom: 1rem;
+}
+
+.form-control {
+    font-size: 0.7rem;
+    width: 25vw;
+    display: grid;
+    grid-template-columns: 1rem auto;
+}
+
+.form-control p {
+    margin-left: 2.2rem;
+    font-size: 0.9rem;
+    line-height: 1.4;
+}
+
+.btn {
+    margin: 1rem;
+    padding: 0.5rem 2rem;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 700;
+    letter-spacing: 0.25rem;
+    color: tomato;
+    border: 2px solid tomato;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: tomato;
+    color: #fefefe;
+    transform: scale(0.95);
 }
